--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir dist",
     "babel-node": "babel-node src/index.js",
-    "dev": "nodemon --exec npm run babel-node",
+    "dev": "node --exec npm run babel-node",
     "start": "node dist/index.js"
   },
   "keywords": [],
